<resources>
    <string name="app_name" translatable="false">S-plus</string>
    <string name="logo_des" translatable="false">Splus Official Logo</string>
    <string name="item_des" translatable="false">Description</string>
    <string name="language_radio_button_vn" translatable="false">Tiếng Việt</string>
    <string name="language_radio_button_en" translatable="false">English</string>
    <string name="locale_vn" translatable="false">vn</string>
    <string name="locale_en" translatable="false">en</string>
    <string name="ex_name" translatable="false">Nguyễn Văn A</string>
    <string name="ex_birth" translatable="false">30/02/2003</string>
    <string name="ex_class" translatable="false">KHMT2021</string>
    <string name="ex_email" translatable="false">todo@example.splus.vn</string>
    <string name="ex_stdID" translatable="false">19520001</string>
    <string name="teacher_name_example" translatable="false">S-Plus</string>
    <string name="text_class_name" translatable="false">Nhập môn Toán học</string>
    <string name="text_lesson_name" translatable="false">Tầm quan trọng của Toán học</string>
    <string name="lesson_content_example" translatable="false">
        <br><b>1. Tổng quan về bài học</b>\n</br>
        <br>\tTrong bài học này chúng ta sẽ tìm hiểu về những khái niệm có liên quan, các chức năng quan trọng chủ yếu và những ứng dụng thực tế của nó.\n</br>
        <br>2. Các khái niệm liên quan\n</br>
        <br>\t<b>Toán học</b> hay <b>toán</b> là ngành nghiên cứu trừu tượng về những chủ đề như: lượng (các con số), cấu trúc, không gian, và sự thay đổi.\n</br>
        <br>\t<b>Giả thiết</b> là một điều kiện mang tính quy ước của người nghiên cứu, nó có thể không tồn tại hoặc không phải lúc nào cũng tồn tại trong thực tế.\n</br>
        <br>\t<b>Định lý</b> là một mệnh đề phi hiển nhiên đã được chứng minh là đúng, hoặc trên cơ sở dẫn xuất từ các tiên đề hoặc được chứng minh trên cơ sở lấy từ các định lý khác.\n</br>
        <br><b>2. Các chức năng quan trọng</b>\n</br>
        <br>\tToán học mang lại cho chúng ta những khả năng sau:\n</br>
        <br>\t\tSuy nghĩ mạch lạc.\n</br>
        <br>\t\tLưu ý đến từng chi tiết.\n</br>
        <br>\t\tLàm chủ những ý tưởng chính xác và phức tạp.\n</br>
        <br>\t\tLập luận phức tạp.\n</br>
        <br>\tXây dựng những lý lẽ logic và chỉ ra những lý lẽ phi logic.\n</br>
        <br><b>3. Một số ứng dụng thực tế</b>\n</br>
        <br>\t\tĐiều khiển hệ thống xe tự hành và quá trình bốc xếp container trong cảng biển.\n</br>
        <br>\t\tĐiều khiển quá trình tự động hóa trong hoạt động logistics.\n</br>
        <br>\t\tTối ưu hóa các quá trình hoạt động của xưởng sản xuất ô tô.\n</br>
        <br>\t\tĐiều khiển robot.\n</br>
        <br>\t\tTối ưu hóa đường bay.\n</br>
        <br>\t\tTối ưu hóa khí động học.\n</br>
        <br>\t\tỨng dụng trong mã hóa.\n</br>
        <br>\t\tỨng dụng trong tài chính.\n</br>
    </string>
    <string name="ex_comment" translatable="false">Never gonna give you up\nNever gonna let you down\nNever gonna run around and desert you\nNever gonna make you cry\nNever gonna say goodbye\nNever gonna tell a lie and hurt you</string>
    <string name="formatted_displayName_createDateOffset" translatable="false"><b>%1$s</b>    %2$s</string>
    <string name="ex_DisplayName_CreatedDateOffset" translatable="false"><b>Rick Astley</b>    Vừa xong</string>
    <string name="demo_lesson_numbers_n" translatable="false"><b>Tổng số bài học:</b>  20</string>
    <string name="title_sign_up">Đăng ký</string>
    <string name="title_log_in">Đăng nhập</string>
    <string name="support_upper">HỖ TRỢ</string>
    <string name="hint_phone_number">Số điện thoại</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_repassword">Nhập lại mật khẩu</string>
    <string name="text_suggest_sign_up">Chưa có tài khoản?</string>
    <string name="text_suggest_log_in">Đã có tài khoản?</string>
    <string name="toast_login_successful">Đăng nhập thành công</string>
    <string name="toast_login_unsuccessful">Đăng nhập thất bại</string>
    <string name="title_fragment_home">Trang chủ</string>
    <string name="title_fragment_course">Lớp học</string>
    <string name="title_fragment_assignment">Bài tập</string>
    <string name="welcome_home_title">Chào mừng bạn đến với S-plus!</string>
    <string name="search_box_hint">Tìm kiếm môn học …</string>
    <string name="recent_ls_title">Bài học gần đây</string>
    <string name="subject_name">Tên môn học</string>
    <string name="lesson_id_example" translatable="false">SPLUS-MATHEMATICS</string>
    <string name="lesson_name">Tên bài học</string>
    <string name="label_course">Khóa học</string>
    <string name="label_class_name">Tên lớp học</string>
    <string name="label_teacher_name">Tên giảng viên</string>
    <string name="title_teacher_name">Giảng viên</string>
    <string name="making_question_button">Đặt câu hỏi</string>
    <string name="lesson_list">Danh sách lớp</string>
    <string name="comments">Bình luận</string>
    <string name="class_detail">Thông tin lớp</string>
    <string name="teacher_info">Liên hệ GV</string>
    <string name="splash_description_1">Ứng dụng học toán\ncao cấp</string>
    <string name="label_name">Họ và tên</string>
    <string name="label_id">MSSV</string>
    <string name="label_birthday">Ngày sinh</string>
    <string name="label_courses">Lớp sinh hoạt</string>
    <string name="label_email">Email</string>
    <string name="label_subject">Môn học</string>
    <string name="des_avatar">Ảnh đại diện</string>
    <string name="current_language">Tiếng Việt</string>
    <string name="title_notification">Thông báo</string>
    <string name="study_activity_title">NỘI DUNG BÀI HỌC</string>
    <string name="class_info_upper">THÔNG TIN LỚP</string>
    <string name="email_teacher_title" translatable="false">Email GV</string>
    <string name="student_list_title">DANH SÁCH LỚP</string>
    <string name="tab_unfinished_assignment">CHƯA NỘP</string>
    <string name="tab_finished_assignment">ĐÃ NỘP</string>
    <string name="title_fragment_setting">Cài đặt</string>
    <string name="display_setting_title">Cài đặt hiển thị</string>
    <string name="ok">OK</string>
    <string name="tab_study_notification">HỌC VỤ</string>
    <string name="tab_other_notification">KHÁC</string>
    <string name="homework_title">Bài tập Cuối khoá</string>
    <string name="remaining_time">Còn 1 giờ 15 phút</string>
    <string name="timestamp_ex">11:59 04/04/2023</string>
    <string name="point_ex">9.8</string>
    <string name="pre_do_homework_title">CHUẨN BỊ LÀM BÀI</string>
    <string name="homework_format_title">Hình thức</string>
    <string name="homework_format">Trắc nghiệm</string>
    <string name="homework_format_2">Tự luận</string>
    <string name="title_homework_number">Số câu</string>
    <string name="homework_number">10</string>
    <string name="title_homework_time">Ứng dụng học toán</string>
    <string name="homework_time">30 phút</string>
    <string name="title_homework_deadline">Hạn nộp</string>
    <string name="button_submit">NỘP BÀI</string>
    <string name="button_enter_assignment">Vào thì</string>
    <string name="title_detail_submission">CHI TIẾT BÀI LÀM</string>
    <string name="title_item_notification">Tiêu đề thông báo</string>
    <string name="notif_content">Nội dung thông báo dạng rút gọn</string>
    <string name="image_for_notification">image for notification</string>
    <string name="notif_time">05/04/2023 14:31</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="title_update_information">SỬA THÔNG TIN</string>
    <string name="button_ask">Đặt câu hỏi</string>
    <string name="hint_make_question">Viết câu hỏi để gửi cho giảng viên …</string>
    <string name="action_setting">Tài khoản</string>
    <string name="update_button">CẬP NHẬT</string>
    <string name="hint_fullname">Vd: Nguyễn Văn A</string>
    <string name="label_phone">Số điện thoại</string>
    <string name="ex_phone">0987654321</string>
    <string name="lable_gender">Giới tính</string>
    <string name="text_gender_male">Nam</string>
    <string name="text_gender_female">Nữ</string>
    <string name="text_gender_others">Khác</string>
    <string name="title_do_homework">Trang làm bài</string>
    <string name="title_remaining_time">Thời gian còn lại:</string>
    <string name="remaining_time_ex">59:32</string>
    <string name="button_give_hw">TẠO BÀI TẬP</string>
    <string name="title_given_homework">Bài tập đã giao</string>
    <string name="title_fragment_assign">Giao bài tập</string>
    <string name="spinner_choose_class">Chọn lớp</string>
    <string name="title_activity_summary">BÁO CÁO BÀI LÀM</string>
    <string name="title_fragment">Tên fragment</string>
    <string name="text_log_in_underline"><u>Đăng nhập</u></string>
    <string name="text_sign_up_underline"><u>Đăng ký</u></string>
    <string name="label_fullname">Họ và tên</string>
    <string name="hint_birthday">dd/mm/yyyy</string>
    <string name="label_role">Chọn vai trò</string>
    <string name="text_role_student">Học sinh</string>
    <string name="text_role_teacher">Giảng viên</string>
    <string name="toast_sign_up_successful">Đăng ký tài khoản thành công</string>
    <string name="toast_sign_up_unsuccessful">Đăng ký thất bại</string>
    <string name="toast_empty_alert">Không được để trống trường này</string>
    <string name="toast_password_matching_alert">Nhập lại mật khẩu không khớp</string>
    <string name="toast_password_min_length_alert" >Mật khẩu chứa tối thiểu 6 kí tự</string>
    <string name="toast_gender_alert">Vui lòng chọn giới tính</string>
    <string name="toast_role_alert">Vui lòng chọn vai trò</string>
    <string name="title_setting">Cài đặt</string>
    <string name="label_language">Ngôn ngữ</string>
    <string name="label_notification">Thông báo</string>
    <string name="label_receive_notification">Nhận thông báo</string>
    <string name="label_change_password">Đổi mật khẩu</string>
    <string name="label_setting">Cài đặt</string>
    <string name="label_log_out">Đăng xuất</string>
    <string name="label_support">Hỗ trợ</string>
    <string name="button_cancel">Đóng</string>
    <string name="title_fragment_account">Tài khoản</string>
    <string name="lable_question_number">"Câu "</string>
    <string name="text_question">Nội dung câu hỏi ở dạng văn bản có thể trình bày theo ngôn ngữ tiếng Việt hoặc tiếng Anh</string>
    <string name="text_answer">Nội dung đáp án</string>
    <string name="reply">Phản hồi</string>
    <string name="one_reply">1 phản hồi</string>
    <string name="n_replies">%1$d phản hồi</string>
    <string name="just_now">Vừa xong</string>
    <string name="n_years_ago">%1$d năm trước</string>
    <string name="one_year_ago">1 năm trước</string>
    <string name="n_months_ago">%1$d tháng trước</string>
    <string name="one_month_ago">1 tháng trước</string>
    <string name="n_days_ago">%1$d ngày trước</string>
    <string name="yesterday">Hôm qua</string>
    <string name="n_hours_ago">%1$d giờ trước</string>
    <string name="one_hour_ago">1 giờ trước</string>
    <string name="n_mins_ago">%1$d phút trước</string>
    <string name="write_a_comment">Viết bình luận…</string>
    <string name="lesson_numbers_n"><b>Tổng số bài học:</b>  %1$d</string>
    <string name="about_this_course">Về khóa học này</string>
    <string name="course_detail">Chi tiết khóa học</string>
    <string name="send">Gửi</string>
    <string name="label_teacher">Giảng viên:</string>
    <string name="hint_course">Tên lớp học</string>
    <string name="title_done">Hoàn tất</string>
    <string name="hint_quantity">Sĩ số</string>
    <string name="hint_course_code">Mã lớp học</string>
    <string name="title_create_course">TẠO KHÓA HỌC</string>
</resources>