<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeItemLesson"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/bg_light_white">

    <TextView
        android:id="@+id/textLessonNameItemLesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/lesson_name"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textClassNameItemLesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLessonNameItemLesson"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_class_name"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textTeacherNameItemLesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textClassNameItemLesson"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_teacher_name"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>