<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeItemAssignmentGiven"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:background="@drawable/bg_light_white">

    <TextView
        android:id="@+id/textNameItemAssignmentGiven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:layout_centerHorizontal="true"
        android:text="@string/homework_title"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <TextView
        android:id="@+id/textClassItemAssignmentGiven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textNameItemAssignmentGiven"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_class_name"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry"
        />
    <TextView
        android:id="@+id/textTimestampItemAssignmentGiven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textClassItemAssignmentGiven"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/timestamp_ex"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry"
        />

</RelativeLayout>