<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCourseActivity">

    <!-- TITLE BAR -->
    <LinearLayout
        android:id="@+id/linearHeaderCreateCourseActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@color/green">

        <!-- BACK BUTTON -->
        <!-- back to fragment course-->
        <ImageButton
            android:id="@+id/buttonBackCreateCourseActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:padding="15dp"
            android:src="@drawable/back_icon"
            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/title_create_course"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_square_24"
            android:padding="15dp"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/lableTeacherCreateCourseActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearHeaderCreateCourseActivity"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/label_teacher"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/textTeacherNameCreateCourseActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lableTeacherCreateCourseActivity"
        android:layout_toEndOf="@+id/lableTeacherCreateCourseActivity"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/teacher_name_example"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/dark_grey"/>

    <EditText
        android:id="@+id/editNameCreateCourseActivity"
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTeacherNameCreateCourseActivity"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/hint_course"
        android:inputType="text"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editCodeCreateCourseActivity"
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editNameCreateCourseActivity"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/hint_course_code"
        android:inputType="text"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/editSizeCreateCourseActivity"
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editCodeCreateCourseActivity"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:hint="@string/hint_quantity"
        android:inputType="numberDecimal"
        android:textColor="@color/dark_grey"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/buttonCreateCourseActivity"
        android:backgroundTint="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editSizeCreateCourseActivity"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/title_done"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

</RelativeLayout>